# app/Http/Controllers/v1/Profile/AuthController.php
@@ -113,4 +113,28 @@ class AuthController extends Controller
     public function logout(){
         return $this->centralUserService->logout();
     }
+
+    /**
+     *
+     * @OA\Post(
+     *     security={ {"bearerAuth" : ""} },
+     *   tags={"Аутентификация"},
+     *   path="/v1/profile/auth/token/refresh",
+     *   summary="Запрос на обновление токена",
+     *   @OA\Response(
+     *     response=200,
+     *     description="",
+     *  ),
+     *   @OA\Response(response=401, description="Не авторизован"),
+     *   @OA\Response(response=403, description="Контент не доступен"),
+     *   @OA\Response(response=404, description="Не найдено"),
+     *   @OA\Response(response=422, description="Валидация формы"),
+     *   @OA\Response(response=429, description="Бан запросов на 1 минуту"),
+     *   @OA\Response(response=500, description="Ошибка сервера")
+     * )
+     * @throws \Exception
+     */
+    public function refreshToken(){
+        return new UserResource($this->centralUserService->refreshToken());
+    }
 }
